[gd_scene load_steps=4 format=3 uid="uid://bg5bdytlpflfm"]

[ext_resource type="Texture2D" uid="uid://dyos5d02n1ao7" path="res://icon.svg" id="1_386lg"]
[ext_resource type="Script" uid="uid://d1x6ct55rl1dm" path="res://script/images.gd" id="2_hwxsa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md8m0"]
size = Vector2(129, 130)

[node name="images" type="TextureRect" groups=["images"]]
offset_right = 128.0
offset_bottom = 128.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_386lg")
expand_mode = 1
stretch_mode = 4
script = ExtResource("2_hwxsa")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(63.5, 62)
shape = SubResource("RectangleShape2D_md8m0")

[node name="highlight" type="Line2D" parent="."]
closed = true
width = 2.0
default_color = Color(1, 0.611765, 0, 1)

[connection signal="deselect" from="." to="." method="_on_deselect"]
[connection signal="selected" from="." to="." method="_on_selected"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
